@@ -1,1 +1,0 @@
-include PH_NGINX_CONF_TMPL_DIR/iredadmin.tmpl;
