@@ -5,6 +5,7 @@ iRedMail-0.9.8:
         - Dovecot: Log subject, sender, size in mail deliver log.
 
     * Fixed issues:
+        - Nginx: Use single config file for default web hosts.
         - tools/backup_sogo.sh
             - not set correct owner and permission on backup files.
             - cannot remove old backup files.
